# django-crud

./: README.md  db.sqlite3  pyproject.toml
snacks/: forms.py  models.py  urls.py  views.py
snacks/migrations/: 0001_initial.py  0002_auto_20210307_1029.py
snacks_crud_project/: settings.py  urls.py
templates/: base.html  create.html  delete.html  detail.html  list.html  new.html  snack-create.html  snack-delete.html  snack-detail.html  snack-list.html  snack-update.html  update.html
